force-app/main/default/objects/Case/fields/National_ID__c.field-meta.xml
<CustomField>
    <fullName>National_ID__c</fullName>
    <label>National ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>