force-app/main/default/objects/Case/fields/Related_Booking__c.field-meta.xml
<CustomField>
    <fullName>Related_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Booking</label>
    <referenceTo>Booking_Unit__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>