force-app/main/default/objects/Case/fields/Related_Commission__c.field-meta.xml
<CustomField>
    <fullName>Related_Commission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Commission</label>
    <referenceTo>BrokerCommission__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>