force-app/main/default/objects/Case/fields/Related_Unit__c.field-meta.xml
<CustomField>
    <fullName>Related_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>