force-app/main/default/objects/Case/recordTypes/Broker_Registration.recordType-meta.xml
<RecordType>
    <fullName>Broker_Registration</fullName>
    <active>true</active>
    <businessProcess>Broker Registration</businessProcess>
    <label>Broker Registration</label>
</RecordType>